--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: wagtail-blocks
 site_description: A Collection of awesome Wagtail CMS stream-field blocks.
 repo_url: https://github.com/ibrahimawadhamid/wagtail_blocks
 
-nav:
+pages:
   - Home: index.md
   - Installation: installation.md
   - Usage: usage.md
