--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,12 @@ site_name: wagtail-blocks
 site_description: A Collection of awesome Wagtail CMS stream-field blocks.
 repo_url: https://github.com/ibrahimawadhamid/wagtail_blocks
 
+theme:
+    name: readthedocs
+    highlightjs: true
+    hljs_languages:
+        - python
+
 nav:
   - Home: index.md
   - Installation: installation.md
