--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
+requirements.txt
 include README.md LICENSE
-recursive-include wagtail_blocks *.py *.html *.js *.css *.txt
+recursive-include wagtail_blocks *.py *.html *.js *.css
